Bug Wrap

--- a/resources/theme/default/pages/templates/index.css
+++ b/resources/theme/default/pages/templates/index.css
@@ -17,6 +17,8 @@ main > *, #page-core {
 
     #page-main {
         grid-area: page-main;
+        display: grid;
+        grid-auto-flow: row;
     }
 
 }
